# semantic-search-eval

./: README.md  pyproject.toml
src/: evaluation.py  main.py  preprocess.py  visualisation.py
src/notebooks/: amazon-esci-eda.ipynb  compare_models.ipynb  poc-semantic-search.ipynb
src/reports/: metrics_summary.csv
