[project]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Ellen"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab (>=4.4.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "ranx (>=0.3.20,<0.4.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
